--- a/app/src/main/res/layout/activity_sport_test.xml
+++ b/app/src/main/res/layout/activity_sport_test.xml
@@ -86,7 +86,7 @@
                 android:layout_centerVertical="true"/>
 
             <TextView
-                android:id="@+id/duration"
+                android:id="@+id/videoDuration"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_toLeftOf="@id/durationIcon"
