--- a/app/src/main/res/layout/activity_info_account.xml
+++ b/app/src/main/res/layout/activity_info_account.xml
@@ -56,7 +56,7 @@
                             android:textStyle="bold" />
 
                         <TextView
-                            android:id="@+id/edite_account"
+                            android:id="@+id/edit_account"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentEnd="true"
@@ -87,7 +87,7 @@
                         android:orientation="vertical">
 
                         <EditText
-                            android:id="@+id/user_name"
+                            android:id="@+id/username"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:background="@null"
