--- a/app/src/main/res/layout/activity_bodybuild.xml
+++ b/app/src/main/res/layout/activity_bodybuild.xml
@@ -1,8 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/drawer"
     tools:context="ir.geek.parvaneh.BodyBuildActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <include
+        layout="@layout/navigation_view"
+        android:layout_alignParentStart="true" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/layoutBackground"
+        android:layoutDirection="rtl">
+
+        <include
+            android:id="@+id/my_toolbar"
+            layout="@layout/toolbar" />
+
+        <GridView
+            android:id="@+id/itemsGrid"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/my_toolbar"
+            android:layout_margin="10dp"
+            android:columnCount="2"
+            android:columnWidth="100dp"
+            android:numColumns="2"
+            android:padding="5dp"></GridView>
+
+    </RelativeLayout>
+</android.support.v4.widget.DrawerLayout>
