--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -32,7 +32,7 @@
         android:layout_height="wrap_content"
         android:textSize="15dp"
         android:textColor="#ffffff"
-        android:text="پروانه"
+        android:text="وحید طاهری"
         android:layout_marginTop="15dp"
         android:layout_centerHorizontal="true"
         />
