--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="layoutBackground">#f8faff</color>
     <color name="white">#ffffff</color>
     <color name="darkgray">#6c6c6c</color>
-    <color name="link">#ff2a68</color>
+    <color name="link">#ff2abf</color>
     <color name="blue_grey">#6d819c</color>
     <color name="grey">#e9e9e9</color>
     <color name="dark">#282c37</color>
